<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="main_header">My Nanodegree Apps!</string>

    <string name="main_spotify_btn">Spotify Streamer</string>
    <string name="main_scores_btn">Scores App</string>
    <string name="main_library_btn">Library App</string>
    <string name="main_bigger_btn">Build It Bigger</string>
    <string name="main_reader_btn">XYZ Reader</string>
    <string name="main_capstone_btn">Capstone: My own app</string>

    <string name="main_desc_base">This button will launch my %s app!</string>
</resources>
