<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        android:text="@string/main_header"
        android:textSize="24sp"/>

    <!-- Spotify Streamer-->
    <Button
        android:id="@+id/main_spotify"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_spotify_btn"/>

    <!-- Football score app -->
    <Button
        android:id="@+id/main_scores"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_scores_btn"/>

    <!-- Library app -->
    <Button
        android:id="@+id/main_library"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_library_btn"/>

    <!-- Build it bigger app -->
    <Button
        android:id="@+id/main_bigger"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_bigger_btn"/>

    <!-- XYZ Reader -->
    <Button
        android:id="@+id/main_reader"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_reader_btn"/>

    <!-- Capstone: my own app-->
    <Button
        android:id="@+id/main_capstone"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/main_capstone_btn"
        android:theme="@style/MyAppButton"/>

</LinearLayout>
